--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,9 @@ default: &default
 
 development:
   <<: *default
-  database: online_assignment-dev
-  username: postgres
-  password: postgres
+  database: online_assignment
+  username: 
+  password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
